<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <!--tools:showIn="navigation_view"-->

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about_bandung"
            android:title="@string/about_bandung" />
        <item
            android:id="@+id/nav_hotels"
            android:title="@string/hotels" />
        <item
            android:id="@+id/nav_restaurants"
            android:title="@string/restaurants" />
        <item
            android:id="@+id/nav_parks"
            android:title="@string/parks" />
        <item
            android:id="@+id/nav_architectural"
            android:title="@string/architecturalbuildings" />
    </group>
</menu>
